--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>prophet</title>
+    <title>Prophet系统</title>
     <link rel="icon" href="static/favicon.ico" />
   </head>
   <body>
